styles.css
@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap");

@font-face {
  font-family: "Hanson-Bold";
  src: url("./assets/fonts/Hanson-Bold.otf") format("opentype");
  /* font-weight: 400; */
  font-style: normal;
  font-display: swap;
}

:root {
  /* new primaries */
  /* Brand Colors */
  --primary: #98388a;
  --primary-container: #fe90e8;
  --primary-fixed: #ffd7f2;
  --primary-fixed-dim: #ffaceb;
  --inverse-primary: #ffaceb;
  --wtp-shadow: #af3b98;

  --secondary: #745b00;
  --secondary-container: #ffd24d;
  --secondary-fixed: #ffe08d;
  --secondary-fixed-dim: #edc23d;

  --tertiary: #30666c;
  --tertiary-container: #89bfc6;
  --tertiary-fixed: #b5ecf3;
  --tertiary-fixed-dim: #9ad0d7;
  --button-back: #e6fcff;
  /* Surface */
  --background: #f9f9f9;
  --surface: #f9f9f9;
  --surface-dim: #dadada;
  --surface-bright: #f9f9f9;

  --surface-container-lowest: #ffffff;
  --surface-container-low: #f3f3f3;
  --surface-container: #eeeeee;
  --surface-container-high: #e8e8e8;
  --surface-container-highest: #e2e2e2;

  --surface-variant: #e2e2e2;
  --surface-tint: #98388a;

  /* Text */
  --on-primary: #ffffff;
  --on-primary-container: #7c1e71;
  --on-primary-fixed: #390034;
  --on-primary-fixed-variant: #7b1d70;

  --on-secondary: #ffffff;
  --on-secondary-container: #735a00;
  --on-secondary-fixed: #241a00;
  --on-secondary-fixed-variant: #584400;

  --on-tertiary: #ffffff;
  --on-tertiary-container: #134f55;
  --on-tertiary-fixed: #001f23;
  --on-tertiary-fixed-variant: #124e54;

  --on-background: #1a1c1c;
  --on-surface: #1a1c1c;
  --on-surface-variant: #52424d;

  --inverse-surface: #6f7476;
  --inverse-on-surface: #f1f1f1;

  /* Borders */
  --outline: #84727d;
  --outline-variant: #d6c1cd;

  /* Error */
  --error: #ba1a1a;
  --error-container: #ffdad6;
  --on-error: #ffffff;
  --on-error-container: #93000a;

  /* Utility / Accent Colors */
  --hover-text-pink: #fe90e8;

  --vivid-pink: #fe90e8;
  /* PRIMARY COLORS */
  --electric-blue: #00d1ff;
  --quiz-shadow: #00667d;
  --bright-yellow: #f7cb46;
  --acid-green: #99e385;
  --paper-white: #ffffff;
  --ink-black: #000000;

  --normal: #a8a878;
  --fire: #f08030;
  --water: #6890f0;
  --electric: #f8d030;
  --grass: #78c850;
  --ice: #98d8d8;
  --fighting: #c03028;
  --poison: #a040a0;
  --ground: #e0c068;
  --flying: #a890f0;
  --psychic: #f85888;
  --bug: #9cab16;
  --rock: #b8a038;
  --ghost: #705898;
  --dragon: #7038f8;
  --dark: #705848;
  --steel: #b8b8d0;
  --fairy: #ee99ac;
  --submit: #40dd40;
  /* sizing */
  --spacing-xs: 4px;
  --spacing-sm: 8px;
  --spacing-md: 16px;
  --spacing-lg: 24px;
  --spacing-xl: 32px;

  --font-size-xs: 14px;
  --font-size-sm: 16px;
  --font-size-md: 26px;
  --font-size-lg: 42px;
  --font-size-xl: 68px;
}
/* xs: 0,
sm: 576px,
md: 768px,
lg: 992px,
xl: 1200px,
xxl: 1400px */
.bg-normal {
  background-color: var(--normal);
}
.bg-fire {
  background-color: var(--fire);
}
.bg-water {
  background-color: var(--water);
}
.bg-electric {
  background-color: var(--electric);
}
.bg-grass {
  background-color: var(--grass);
}
.bg-ice {
  background-color: var(--ice);
}
.bg-fighting {
  background-color: var(--fighting);
}
.bg-poison {
  background-color: var(--poison);
}
.bg-ground {
  background-color: var(--ground);
}
.bg-flying {
  background-color: var(--flying);
}
.bg-psychic {
  background-color: var(--psychic);
}
.bg-bug {
  background-color: var(--bug);
}
.bg-rock {
  background-color: var(--rock);
}
.bg-ghost {
  background-color: var(--ghost);
}
.bg-dragon {
  background-color: var(--dragon);
}
.bg-dark {
  background-color: var(--dark);
}
.bg-steel {
  background-color: var(--steel);
}
.bg-fairy {
  background-color: var(--fairy);
}

html {
  font-size: 16px;
  font-family: "Sora";
}
a {
  color: unset;
  text-decoration: none;
}

ul {
  list-style-type: none;
}

button {
  border: unset;
  background: unset;
}

body {
  background-image: url("./assets/dot-grid.webp");
}
h1 {
  display: flex;
  flex-direction: column;
  font-size: var(--font-size-lg);
  padding: var(--spacing-md);
}

h2 {
  font-size: var(--font-size-md);
}
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
.black-overlay {
  filter: brightness(0);
}
.container {
  width: 100%;
  margin-inline: auto;
  padding: var(--spacing-md);
}
/* #region header */
.header {
  width: 100%;
  background-color: var(--paper-white);
  box-shadow: 8px 4px 15px 0px rgba(0, 0, 0, 1);
  margin-bottom: 20px;
}

.header__inner {
  display: flex;
  flex-direction: column;
  padding: var(--spacing-md) var(--spacing-lg);
}

.header__top {
  display: flex;
  justify-content: space-between;
}

.header__title {
  font-size: 2rem;
  font-family: "Hanson-Bold";
}

.header__branding {
  display: flex;
  gap: var(--spacing-sm);
  align-items: center;
}

.header__menu-button {
  cursor: pointer;
}

.header__nav {
  max-height: 0;
  overflow: hidden;
}

.header__nav--expanded {
  max-height: 190px;
}

.header__nav-list {
  margin-top: var(--spacing-md);
  border-top: 3px solid #0000004e;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: var(--spacing-lg);
  padding-top: var(--spacing-md);
  width: 100%;
}
.header__nav-link {
  transition: all 0.35s ease-out;
  padding: var(--spacing-sm);
}

.header__nav-link--active {
  padding: 8px 8px 4px 8px;
  font-weight: bold;
}

.header__nav-link:hover {
  background-color: var(--primary-fixed-dim);
}
/* #endregion header */
/* #region homepage__hero */

.homepage__hero-trainer {
  margin-top: 20px;
  background-color: var(--primary-container);
  transform: rotate(-4deg);
  box-shadow: 8px 4px 0px 0px var(--inverse-surface);
  border: 5px solid black;
  padding: var(--spacing-md) var(--spacing-md);
  width: fit-content;
  text-shadow: 1px 1px var(--wtp-shadow);
  margin-bottom: 20px;
}

.homepage__hero p {
  width: fit-content;
  font-weight: bold;
  padding: var(--spacing-md) var(--spacing-lg);
  box-shadow: 8px 8px 0px 0px var(--inverse-surface);
  border: 5px solid black;
  margin-bottom: 20px;
}

.homepage__hero-img {
  display: block;
  margin-inline: auto;
  width: 100%;
  margin-bottom: 20px;
}

/* #endregion homepage__hero */

/* #region modules__casing*/

.module__grid {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  grid-template-rows: repeat(5, auto);
  gap: var(--spacing-sm);
}
.module__card {
  transition: transform 0.3s ease-out;
  margin: var(--spacing-xs);
  padding: var(--spacing-lg);
  display: flex;
  flex-direction: column;
  border: 5px solid black;
  box-shadow: 8px 8px 0 0 var(--inverse-surface);
}
.module__card:hover {
  transform: translate(-2px, -2px);
}

/* #endregion modules__casing*/
/* #region wtp*/

.module__wtp button {
  align-self: flex-start;
  background-color: var(--button-back);
  padding: var(--spacing-sm) var(--spacing-md);
  width: fit-content;
  transition: all 0.4s ease-out;
  box-shadow: 4px 4px 0px 0px var(--wtp-shadow);
  border: 5px solid black;
  font-weight: bold;
}

.module__wtp:hover img {
  display: flex;
  align-self: flex-end;
  margin-right: -26px;

  rotate: -25deg;
  filter: none;
}
.module__wtp:hover button {
  background-color: var(--secondary-container);
}
.module__wtp-blackbox {
  width: fit-content;
  background-color: #000000;
  color: #f8f8f8;
  align-self: flex-start;
  font-size: var(--font-size-xs);
  font-weight: bold;
  padding: var(--spacing-sm) var(--spacing-sm);
}

.module__wtp {
  background-color: var(--primary-container);
  gap: var(--spacing-md);
}

.module__wtp img {
  display: flex;
  align-self: flex-end;
  height: 200px;
  margin-right: -26px;
  transition: all 0.4s ease-out;
}
/* #endregion module__wtp */
/* #region quiz */

.module__quiz {
  background-color: var(--electric-blue);
  align-items: flex-start;
  gap: var(--spacing-md);
}
.module__quiz-smalltext {
  background-color: var(--button-back);
  padding: var(--spacing-xs) var(--spacing-sm);
  box-shadow: 3px 3px 0px 0px var(--quiz-shadow);
  border: 5px solid black;
  font-size: var(--font-size-xs);
}

.module__quiz span {
  align-self: flex-end;
  background-color: var(--bright-yellow);
  box-shadow: 8px 4px 0px 0px var(--quiz-shadow);
  border: 5px solid black;
  padding: var(--spacing-md) var(--spacing-md);
  transform: rotate(4deg);
  margin-top: var(--spacing-lg);
  transition: all 0.3s;
}
.module__quiz:hover span {
  rotate: -6deg;
}

/* #endregion module__quiz */
/* #region team */
.module__team {
  background-color: var(--secondary-container);
  gap: var(--spacing-md);
}
.module__team img {
  margin-top: var(--spacing-lg);
  display: flex;
  align-self: flex-end;
  width: 100px;
  transition: all 0.3s ease-out;
}
.module__team:hover img {
  width: 150px;
}
/* #endregion module_team */
/* #region rotodex */
.module__rotodex {
  background-color: var(--acid-green);
  gap: var(--spacing-md);
}
.module__rotodex-top {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-md);
  justify-content: space-between;
}

.module__rotodex img {
  align-self: flex-end;
  transition: all 0.35s ease-out;
  width: 180px;
  margin-right: 30px;
  transform: rotatey(180deg);
  rotate: -50deg;
}

.module__rotodex:hover img {
  rotate: -25deg;
}
/* #endregion */

.footer {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  gap: 20px;
  text-align: center;
  padding: var(--spacing-md);
  background-color: var(--electric-blue);
  border-top: 8px solid black;
}

/* xs: 0,
sm: 576px,
md: 768px,
lg: 992px,
xl: 1200px,
xxl: 1400px */
@media (width <= 991px) {
  .header__nav {
    transition: max-height 0.45s ease-out;
  }
}
@media (width >= 768px) {
  .container {
    max-width: 768px;
  }
  .homepage__hero-img {
    display: block;
    margin-inline: auto;
    width: 500px;
  }
  .header__inner {
    margin-inline: auto;
  }
  .homepage__hero p,
  .module__card p {
    width: 60%;
  }
  .module__wtp-blackbox {
    max-width: 118px;
  }
  .module__quiz-smalltext {
    max-width: 74px;
  }
}

@media (width >= 992px) {
  .container {
    max-width: 992px;
  }

  .homepage__hero p,
  .module__card p {
    width: 100%;
  }

  .header__inner {
    flex-direction: row;
    justify-content: space-between;
  }

  .header__menu-button {
    display: none;
  }

  .header__nav {
    max-height: none;
    transition: none;
  }

  .header__nav-list {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: var(--spacing-md);
    margin-top: 0;
    border-top: 0;
  }
  .homepage__hero {
    display: flex;
    justify-content: space-between;
  }

  .hero__picture {
    display: flex;
    width: 100%;
  }

  .module__grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, auto);
  }

  .module__wtp {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 2;
  }

  .module__wtp-blackbox {
    max-width: 118px;
  }

  .module__rotodex {
    grid-column-start: 2;
    grid-column-end: 4;
    grid-row-start: 2;
    grid-row-end: 3;
    display: flex;
    flex-direction: row;
  }

  .module__rotodex-top {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
  }
}

@media (width >= 1200px) {
  .container {
    max-width: 1200px;
  }
}
@media (width >= 1400px) {
  .container {
    max-width: 1400px;
  }
}

